parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    AS
    ASSERT
    ASYNC
    AWAIT
    CASE
    CATCH
    CLASS
    CONST
    COVARIANT
    DEFAULT
    DEFERRED
    DIVIDEINT
    DO
    DOUBLE
    DYNAMIC
    ENUM
    EXPORT
    EXPRESS
    EXTENDS
    EXTENSION
    EXTERNAL
    FACTORY
    FALSE
    FINAL
    FINALLY
    FUNCTION
    GET
    HIDE
    IMPLEMENTS
    IMPORT
    INTERFACE
    IS
    LIBRARY
    LIST
    MAP
    MIXIN
    NEW
    NULL
    NUM
    ON
    OPERATOR
    PART
    RETHROW
    SET
    SHOW
    STATIC
    SUPER
    SWITCH
    SYNC
    THIS
    THROW
    TRUE
    TRY
    TYPEDEF
    UNARY_BITWASE_COMPLEMENT
    WITH
    XOR
    YIELD

Grammar

Rule 0     S' -> topLevelDeclaration
Rule 1     topLevelDeclaration -> functionSignature body
Rule 2     topLevelDeclaration -> type initializedIdentifierList POINT_V
Rule 3     topLevelDeclaration -> functionSignature body topLevelDeclaration
Rule 4     topLevelDeclaration -> type initializedIdentifierList POINT_V topLevelDeclaration
Rule 5     initializedIdentifierList -> ID EQUAL expression p_initializedIdentifierList_estrela
Rule 6     p_initializedIdentifierList_estrela -> COMMA ID EQUAL expression
Rule 7     p_initializedIdentifierList_estrela -> COMMA ID EQUAL expression p_initializedIdentifierList_estrela
Rule 8     functionSignature -> type ID formalParameterPart
Rule 9     functionSignature -> ID formalParameterPart
Rule 10    type -> VOID
Rule 11    type -> STRING
Rule 12    type -> BOOL
Rule 13    type -> INT
Rule 14    type -> FLOAT
Rule 15    type -> VAR
Rule 16    formalParameterPart -> formalParameterList
Rule 17    formalParameterList -> OPEN_PARENTHESES CLOSE_PARENTHESES
Rule 18    formalParameterList -> OPEN_PARENTHESES normalFormalParameters COMMA CLOSE_PARENTHESES
Rule 19    formalParameterList -> OPEN_PARENTHESES normalFormalParameters CLOSE_PARENTHESES
Rule 20    normalFormalParameters -> normalFormalParameter p_normalFormalParameters_estrela
Rule 21    p_normalFormalParameters_estrela -> COMMA normalFormalParameter
Rule 22    p_normalFormalParameters_estrela -> COMMA normalFormalParameter p_normalFormalParameters_estrela
Rule 23    normalFormalParameter -> type ID
Rule 24    body -> OPEN_KEYS statements CLOSE_KEYS
Rule 25    body -> OPEN_KEYS CLOSE_KEYS
Rule 26    statements -> statements statement
Rule 27    statements -> statement
Rule 28    statement -> body
Rule 29    statement -> localVariableDeclaration
Rule 30    statement -> forStatement
Rule 31    statement -> whileStatement
Rule 32    statement -> ifStatement
Rule 33    statement -> breakStatement
Rule 34    statement -> continueStatement
Rule 35    statement -> returnStatement
Rule 36    statement -> expressionStatement
Rule 37    localVariableDeclaration -> type ID EQUAL expression expression_one_equal POINT_COMMA
Rule 38    localVariableDeclaration -> type ID expression_one_equal POINT_COMMA
Rule 39    localVariableDeclaration -> type ID EQUAL expression COMMA ID POINT_COMMA
Rule 40    localVariableDeclaration -> type ID COMMA ID POINT_COMMA
Rule 41    expression_one_equal -> COMMA ID EQUAL expression
Rule 42    expression_one_equal -> COMMA ID
Rule 43    expression_one_equal -> COMMA ID EQUAL expression expression_one_equal
Rule 44    expression_one_equal -> COMMA ID expression_one_equal
Rule 45    forStatement -> FOR OPEN_PARENTHESES forLoopParts CLOSE_PARENTHESES statement
Rule 46    forStatement -> FOR OPEN_PARENTHESES forLoopParts CLOSE_PARENTHESES body
Rule 47    forLoopparts -> localVariableDeclaration POINT_COMMA expression POINT_COMMA expressionList
Rule 48    forLoopparts -> localVariableDeclaration POINT_COMMA POINT_COMMA expressionList
Rule 49    forLoopparts -> localVariableDeclaration POINT_COMMA expression POINT_COMMA
Rule 50    forLoopparts -> localVariableDeclaration POINT_COMMA POINT_COMMA
Rule 51    forLoopparts -> expression POINT_COMMA expression POINT_COMMA expressionList
Rule 52    forLoopparts -> expression POINT_COMMA POINT_COMMA expressionList
Rule 53    forLoopparts -> expression POINT_COMMA expression POINT_COMMA
Rule 54    forLoopparts -> expression POINT_COMMA POINT_COMMA
Rule 55    forLoopParts -> type ID IN expression
Rule 56    forLoopParts -> ID IN expression
Rule 57    expressionList -> expression
Rule 58    expressionList -> expression COMMA expressionList
Rule 59    whileStatement -> WHILE OPEN_PARENTHESES expression CLOSE_PARENTHESES statement
Rule 60    whileStatement -> WHILE OPEN_PARENTHESES expression CLOSE_PARENTHESES body
Rule 61    ifStatement -> IF OPEN_PARENTHESES expression CLOSE_PARENTHESES statement ELSE statement
Rule 62    ifStatement -> IF OPEN_PARENTHESES expression CLOSE_PARENTHESES body ELSE body
Rule 63    ifStatement -> IF OPEN_PARENTHESES expression CLOSE_PARENTHESES statement ELSE body
Rule 64    ifStatement -> IF OPEN_PARENTHESES expression CLOSE_PARENTHESES statement
Rule 65    ifStatement -> IF OPEN_PARENTHESES expression CLOSE_PARENTHESES body
Rule 66    ifStatement -> IF OPEN_PARENTHESES expression CLOSE_PARENTHESES body ELSE statement
Rule 67    breakStatement -> BREAK POINT_COMMA
Rule 68    continueStatement -> CONTINUE POINT_COMMA
Rule 69    expressionStatement -> RETURN expression POINT_COMMA
Rule 70    expressionStatement -> RETURN POINT_COMMA
Rule 71    returnStatement -> expression POINT_COMMA
Rule 72    returnStatement -> POINT_COMMA
Rule 73    expression -> expression EQUAL expression_0
Rule 74    expression -> expression PLUS_EQUAL expression_0
Rule 75    expression -> expression MINUS_EQUAL expression_0
Rule 76    expression -> expression MULTIPLICATION_DIVISION expression_0
Rule 77    expression -> expression DIVIDE_EQUAL expression_0
Rule 78    expression -> expression_0
Rule 79    expression_0 -> expression_0 OR expression_1
Rule 80    expression_0 -> expression_1
Rule 81    expression_1 -> expression_1 AND expression_2
Rule 82    expression_1 -> expression_2
Rule 83    expression_2 -> expression_2 EQUAL_EQUAL expression_3
Rule 84    expression_2 -> expression_2 DIFFERENT expression_3
Rule 85    expression_2 -> expression_3
Rule 86    expression_3 -> expression_3 EQUAL_EQUAL expression_4
Rule 87    expression_3 -> expression_3 DIFFERENT expression_4
Rule 88    expression_3 -> expression_4
Rule 89    expression_4 -> expression_4 LESS_THAN expression_5
Rule 90    expression_4 -> expression_4 GREATER_THAN expression_5
Rule 91    expression_4 -> expression_4 LESS_THAN_OR_EQUAL_TO expression_5
Rule 92    expression_4 -> expression_4 GREATER_THAN_OR_EQUAL_TO expression_5
Rule 93    expression_4 -> expression_5
Rule 94    expression_5 -> expression_5 LOGIC_OR expression_6
Rule 95    expression_5 -> expression_6
Rule 96    expression_6 -> expression_6 LOGIC_AND expression_7
Rule 97    expression_6 -> expression_7
Rule 98    expression_7 -> expression_7 SHIFT_LEFT expression_8
Rule 99    expression_7 -> expression_7 SHIFT_RIGHT expression_8
Rule 100   expression_7 -> expression_8
Rule 101   expression_8 -> expression_8 PLUS expression_9
Rule 102   expression_8 -> expression_8 MINUS expression_9
Rule 103   expression_8 -> expression_9
Rule 104   expression_9 -> expression_9 MULT expression_10
Rule 105   expression_9 -> expression_9 PERCENTAGE expression_10
Rule 106   expression_9 -> expression_9 DIVIDE expression_10
Rule 107   expression_9 -> expression_10
Rule 108   expression_10 -> MINUS expression_10
Rule 109   expression_10 -> PLUS_PLUS expression_10
Rule 110   expression_10 -> MINUS_MINUS expression_10
Rule 111   expression_10 -> INVERT expression_10
Rule 112   expression_10 -> expression_11
Rule 113   expression_11 -> expression_11 MINUS_MINUS
Rule 114   expression_11 -> expression_11 PLUS_PLUS
Rule 115   expression_11 -> expression_11 OPEN_CONCHETE expression_11 CLOSE_CONCHETE
Rule 116   expression_11 -> OPEN_PARENTHESES expression CLOSE_PARENTHESES
Rule 117   expression_11 -> expression_12
Rule 118   expression_12 -> ID
Rule 119   expression_12 -> STRING_LITERAL
Rule 120   expression_12 -> NUMBER
Rule 121   expression_12 -> BOOL
Rule 122   expression_12 -> ID OPEN_PARENTHESES normalFormalParameter CLOSE_PARENTHESES

Terminals, with rules where they appear

ABSTRACT             : 
AND                  : 81
AS                   : 
ASSERT               : 
ASYNC                : 
AWAIT                : 
BOOL                 : 12 121
BREAK                : 67
CASE                 : 
CATCH                : 
CLASS                : 
CLOSE_CONCHETE       : 115
CLOSE_KEYS           : 24 25
CLOSE_PARENTHESES    : 17 18 19 45 46 59 60 61 62 63 64 65 66 116 122
COMMA                : 6 7 18 21 22 39 40 41 42 43 44 58
CONST                : 
CONTINUE             : 68
COVARIANT            : 
DEFAULT              : 
DEFERRED             : 
DIFFERENT            : 84 87
DIVIDE               : 106
DIVIDEINT            : 
DIVIDE_EQUAL         : 77
DO                   : 
DOUBLE               : 
DYNAMIC              : 
ELSE                 : 61 62 63 66
ENUM                 : 
EQUAL                : 5 6 7 37 39 41 43 73
EQUAL_EQUAL          : 83 86
EXPORT               : 
EXPRESS              : 
EXTENDS              : 
EXTENSION            : 
EXTERNAL             : 
FACTORY              : 
FALSE                : 
FINAL                : 
FINALLY              : 
FLOAT                : 14
FOR                  : 45 46
FUNCTION             : 
GET                  : 
GREATER_THAN         : 90
GREATER_THAN_OR_EQUAL_TO : 92
HIDE                 : 
ID                   : 5 6 7 8 9 23 37 38 39 39 40 40 41 42 43 44 55 56 118 122
IF                   : 61 62 63 64 65 66
IMPLEMENTS           : 
IMPORT               : 
IN                   : 55 56
INT                  : 13
INTERFACE            : 
INVERT               : 111
IS                   : 
LESS_THAN            : 89
LESS_THAN_OR_EQUAL_TO : 91
LIBRARY              : 
LIST                 : 
LOGIC_AND            : 96
LOGIC_OR             : 94
MAP                  : 
MINUS                : 102 108
MINUS_EQUAL          : 75
MINUS_MINUS          : 110 113
MIXIN                : 
MULT                 : 104
MULTIPLICATION_DIVISION : 76
NEW                  : 
NULL                 : 
NUM                  : 
NUMBER               : 120
ON                   : 
OPEN_CONCHETE        : 115
OPEN_KEYS            : 24 25
OPEN_PARENTHESES     : 17 18 19 45 46 59 60 61 62 63 64 65 66 116 122
OPERATOR             : 
OR                   : 79
PART                 : 
PERCENTAGE           : 105
PLUS                 : 101
PLUS_EQUAL           : 74
PLUS_PLUS            : 109 114
POINT_COMMA          : 37 38 39 40 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 67 68 69 70 71 72
POINT_V              : 2 4
RETHROW              : 
RETURN               : 69 70
SET                  : 
SHIFT_LEFT           : 98
SHIFT_RIGHT          : 99
SHOW                 : 
STATIC               : 
STRING               : 11
STRING_LITERAL       : 119
SUPER                : 
SWITCH               : 
SYNC                 : 
THIS                 : 
THROW                : 
TRUE                 : 
TRY                  : 
TYPEDEF              : 
UNARY_BITWASE_COMPLEMENT : 
VAR                  : 15
VOID                 : 10
WHILE                : 59 60
WITH                 : 
XOR                  : 
YIELD                : 
error                : 

Nonterminals, with rules where they appear

body                 : 1 3 28 46 60 62 62 63 65 66
breakStatement       : 33
continueStatement    : 34
expression           : 5 6 7 37 39 41 43 47 49 51 51 52 53 53 54 55 56 57 58 59 60 61 62 63 64 65 66 69 71 73 74 75 76 77 116
expressionList       : 47 48 51 52 58
expressionStatement  : 36
expression_0         : 73 74 75 76 77 78 79
expression_1         : 79 80 81
expression_10        : 104 105 106 107 108 109 110 111
expression_11        : 112 113 114 115 115
expression_12        : 117
expression_2         : 81 82 83 84
expression_3         : 83 84 85 86 87
expression_4         : 86 87 88 89 90 91 92
expression_5         : 89 90 91 92 93 94
expression_6         : 94 95 96
expression_7         : 96 97 98 99
expression_8         : 98 99 100 101 102
expression_9         : 101 102 103 104 105 106
expression_one_equal : 37 38 43 44
forLoopParts         : 45 46
forLoopparts         : 
forStatement         : 30
formalParameterList  : 16
formalParameterPart  : 8 9
functionSignature    : 1 3
ifStatement          : 32
initializedIdentifierList : 2 4
localVariableDeclaration : 29 47 48 49 50
normalFormalParameter : 20 21 22 122
normalFormalParameters : 18 19
p_initializedIdentifierList_estrela : 5 7
p_normalFormalParameters_estrela : 20 22
returnStatement      : 35
statement            : 26 27 45 59 61 61 63 64 66
statements           : 24 26
topLevelDeclaration  : 3 4 0
type                 : 2 4 8 23 37 38 39 40 55
whileStatement       : 31

Parsing method: LALR

state 0

    (0) S' -> . topLevelDeclaration
    (1) topLevelDeclaration -> . functionSignature body
    (2) topLevelDeclaration -> . type initializedIdentifierList POINT_V
    (3) topLevelDeclaration -> . functionSignature body topLevelDeclaration
    (4) topLevelDeclaration -> . type initializedIdentifierList POINT_V topLevelDeclaration
    (8) functionSignature -> . type ID formalParameterPart
    (9) functionSignature -> . ID formalParameterPart
    (10) type -> . VOID
    (11) type -> . STRING
    (12) type -> . BOOL
    (13) type -> . INT
    (14) type -> . FLOAT
    (15) type -> . VAR

    ID              shift and go to state 4
    VOID            shift and go to state 5
    STRING          shift and go to state 6
    BOOL            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    VAR             shift and go to state 10

    topLevelDeclaration            shift and go to state 1
    functionSignature              shift and go to state 2
    type                           shift and go to state 3

state 1

    (0) S' -> topLevelDeclaration .



state 2

    (1) topLevelDeclaration -> functionSignature . body
    (3) topLevelDeclaration -> functionSignature . body topLevelDeclaration
    (24) body -> . OPEN_KEYS statements CLOSE_KEYS
    (25) body -> . OPEN_KEYS CLOSE_KEYS

    OPEN_KEYS       shift and go to state 12

    body                           shift and go to state 11

state 3

    (2) topLevelDeclaration -> type . initializedIdentifierList POINT_V
    (4) topLevelDeclaration -> type . initializedIdentifierList POINT_V topLevelDeclaration
    (8) functionSignature -> type . ID formalParameterPart
    (5) initializedIdentifierList -> . ID EQUAL expression p_initializedIdentifierList_estrela

    ID              shift and go to state 14

    initializedIdentifierList      shift and go to state 13

state 4

    (9) functionSignature -> ID . formalParameterPart
    (16) formalParameterPart -> . formalParameterList
    (17) formalParameterList -> . OPEN_PARENTHESES CLOSE_PARENTHESES
    (18) formalParameterList -> . OPEN_PARENTHESES normalFormalParameters COMMA CLOSE_PARENTHESES
    (19) formalParameterList -> . OPEN_PARENTHESES normalFormalParameters CLOSE_PARENTHESES

    OPEN_PARENTHESES shift and go to state 17

    formalParameterPart            shift and go to state 15
    formalParameterList            shift and go to state 16

state 5

    (10) type -> VOID .

    ID              reduce using rule 10 (type -> VOID .)


state 6

    (11) type -> STRING .

    ID              reduce using rule 11 (type -> STRING .)


state 7

    (12) type -> BOOL .

    ID              reduce using rule 12 (type -> BOOL .)


state 8

    (13) type -> INT .

    ID              reduce using rule 13 (type -> INT .)


state 9

    (14) type -> FLOAT .

    ID              reduce using rule 14 (type -> FLOAT .)


state 10

    (15) type -> VAR .

    ID              reduce using rule 15 (type -> VAR .)


state 11

    (1) topLevelDeclaration -> functionSignature body .
    (3) topLevelDeclaration -> functionSignature body . topLevelDeclaration
    (1) topLevelDeclaration -> . functionSignature body
    (2) topLevelDeclaration -> . type initializedIdentifierList POINT_V
    (3) topLevelDeclaration -> . functionSignature body topLevelDeclaration
    (4) topLevelDeclaration -> . type initializedIdentifierList POINT_V topLevelDeclaration
    (8) functionSignature -> . type ID formalParameterPart
    (9) functionSignature -> . ID formalParameterPart
    (10) type -> . VOID
    (11) type -> . STRING
    (12) type -> . BOOL
    (13) type -> . INT
    (14) type -> . FLOAT
    (15) type -> . VAR

    $end            reduce using rule 1 (topLevelDeclaration -> functionSignature body .)
    ID              shift and go to state 4
    VOID            shift and go to state 5
    STRING          shift and go to state 6
    BOOL            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    VAR             shift and go to state 10

    functionSignature              shift and go to state 2
    topLevelDeclaration            shift and go to state 18
    type                           shift and go to state 3

state 12

    (24) body -> OPEN_KEYS . statements CLOSE_KEYS
    (25) body -> OPEN_KEYS . CLOSE_KEYS
    (26) statements -> . statements statement
    (27) statements -> . statement
    (28) statement -> . body
    (29) statement -> . localVariableDeclaration
    (30) statement -> . forStatement
    (31) statement -> . whileStatement
    (32) statement -> . ifStatement
    (33) statement -> . breakStatement
    (34) statement -> . continueStatement
    (35) statement -> . returnStatement
    (36) statement -> . expressionStatement
    (24) body -> . OPEN_KEYS statements CLOSE_KEYS
    (25) body -> . OPEN_KEYS CLOSE_KEYS
    (37) localVariableDeclaration -> . type ID EQUAL expression expression_one_equal POINT_COMMA
    (38) localVariableDeclaration -> . type ID expression_one_equal POINT_COMMA
    (39) localVariableDeclaration -> . type ID EQUAL expression COMMA ID POINT_COMMA
    (40) localVariableDeclaration -> . type ID COMMA ID POINT_COMMA
    (45) forStatement -> . FOR OPEN_PARENTHESES forLoopParts CLOSE_PARENTHESES statement
    (46) forStatement -> . FOR OPEN_PARENTHESES forLoopParts CLOSE_PARENTHESES body
    (59) whileStatement -> . WHILE OPEN_PARENTHESES expression CLOSE_PARENTHESES statement
    (60) whileStatement -> . WHILE OPEN_PARENTHESES expression CLOSE_PARENTHESES body
    (61) ifStatement -> . IF OPEN_PARENTHESES expression CLOSE_PARENTHESES statement ELSE statement
    (62) ifStatement -> . IF OPEN_PARENTHESES expression CLOSE_PARENTHESES body ELSE body
    (63) ifStatement -> . IF OPEN_PARENTHESES expression CLOSE_PARENTHESES statement ELSE body
    (64) ifStatement -> . IF OPEN_PARENTHESES expression CLOSE_PARENTHESES statement
    (65) ifStatement -> . IF OPEN_PARENTHESES expression CLOSE_PARENTHESES body
    (66) ifStatement -> . IF OPEN_PARENTHESES expression CLOSE_PARENTHESES body ELSE statement
    (67) breakStatement -> . BREAK POINT_COMMA
    (68) continueStatement -> . CONTINUE POINT_COMMA
    (71) returnStatement -> . expression POINT_COMMA
    (72) returnStatement -> . POINT_COMMA
    (69) expressionStatement -> . RETURN expression POINT_COMMA
    (70) expressionStatement -> . RETURN POINT_COMMA
    (10) type -> . VOID
    (11) type -> . STRING
    (12) type -> . BOOL
    (13) type -> . INT
    (14) type -> . FLOAT
    (15) type -> . VAR
    (73) expression -> . expression EQUAL expression_0
    (74) expression -> . expression PLUS_EQUAL expression_0
    (75) expression -> . expression MINUS_EQUAL expression_0
    (76) expression -> . expression MULTIPLICATION_DIVISION expression_0
    (77) expression -> . expression DIVIDE_EQUAL expression_0
    (78) expression -> . expression_0
    (79) expression_0 -> . expression_0 OR expression_1
    (80) expression_0 -> . expression_1
    (81) expression_1 -> . expression_1 AND expression_2
    (82) expression_1 -> . expression_2
    (83) expression_2 -> . expression_2 EQUAL_EQUAL expression_3
    (84) expression_2 -> . expression_2 DIFFERENT expression_3
    (85) expression_2 -> . expression_3
    (86) expression_3 -> . expression_3 EQUAL_EQUAL expression_4
    (87) expression_3 -> . expression_3 DIFFERENT expression_4
    (88) expression_3 -> . expression_4
    (89) expression_4 -> . expression_4 LESS_THAN expression_5
    (90) expression_4 -> . expression_4 GREATER_THAN expression_5
    (91) expression_4 -> . expression_4 LESS_THAN_OR_EQUAL_TO expression_5
    (92) expression_4 -> . expression_4 GREATER_THAN_OR_EQUAL_TO expression_5
    (93) expression_4 -> . expression_5
    (94) expression_5 -> . expression_5 LOGIC_OR expression_6
    (95) expression_5 -> . expression_6
    (96) expression_6 -> . expression_6 LOGIC_AND expression_7
    (97) expression_6 -> . expression_7
    (98) expression_7 -> . expression_7 SHIFT_LEFT expression_8
    (99) expression_7 -> . expression_7 SHIFT_RIGHT expression_8
    (100) expression_7 -> . expression_8
    (101) expression_8 -> . expression_8 PLUS expression_9
    (102) expression_8 -> . expression_8 MINUS expression_9
    (103) expression_8 -> . expression_9
    (104) expression_9 -> . expression_9 MULT expression_10
    (105) expression_9 -> . expression_9 PERCENTAGE expression_10
    (106) expression_9 -> . expression_9 DIVIDE expression_10
    (107) expression_9 -> . expression_10
    (108) expression_10 -> . MINUS expression_10
    (109) expression_10 -> . PLUS_PLUS expression_10
    (110) expression_10 -> . MINUS_MINUS expression_10
    (111) expression_10 -> . INVERT expression_10
    (112) expression_10 -> . expression_11
    (113) expression_11 -> . expression_11 MINUS_MINUS
    (114) expression_11 -> . expression_11 PLUS_PLUS
    (115) expression_11 -> . expression_11 OPEN_CONCHETE expression_11 CLOSE_CONCHETE
    (116) expression_11 -> . OPEN_PARENTHESES expression CLOSE_PARENTHESES
    (117) expression_11 -> . expression_12
    (118) expression_12 -> . ID
    (119) expression_12 -> . STRING_LITERAL
    (120) expression_12 -> . NUMBER
    (121) expression_12 -> . BOOL
    (122) expression_12 -> . ID OPEN_PARENTHESES normalFormalParameter CLOSE_PARENTHESES

    CLOSE_KEYS      shift and go to state 20
    OPEN_KEYS       shift and go to state 12
    FOR             shift and go to state 35
    WHILE           shift and go to state 37
    IF              shift and go to state 38
    BREAK           shift and go to state 39
    CONTINUE        shift and go to state 40
    POINT_COMMA     shift and go to state 34
    RETURN          shift and go to state 41
    VOID            shift and go to state 5
    STRING          shift and go to state 6
    BOOL            shift and go to state 42
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    VAR             shift and go to state 10
    MINUS           shift and go to state 53
    PLUS_PLUS       shift and go to state 55
    MINUS_MINUS     shift and go to state 56
    INVERT          shift and go to state 57
    OPEN_PARENTHESES shift and go to state 36
    ID              shift and go to state 32
    STRING_LITERAL  shift and go to state 60
    NUMBER          shift and go to state 61

    statements                     shift and go to state 19
    statement                      shift and go to state 21
    body                           shift and go to state 22
    localVariableDeclaration       shift and go to state 23
    forStatement                   shift and go to state 24
    whileStatement                 shift and go to state 25
    ifStatement                    shift and go to state 26
    breakStatement                 shift and go to state 27
    continueStatement              shift and go to state 28
    returnStatement                shift and go to state 29
    expressionStatement            shift and go to state 30
    type                           shift and go to state 31
    expression                     shift and go to state 33
    expression_0                   shift and go to state 43
    expression_1                   shift and go to state 44
    expression_2                   shift and go to state 45
    expression_3                   shift and go to state 46
    expression_4                   shift and go to state 47
    expression_5                   shift and go to state 48
    expression_6                   shift and go to state 49
    expression_7                   shift and go to state 50
    expression_8                   shift and go to state 51
    expression_9                   shift and go to state 52
    expression_10                  shift and go to state 54
    expression_11                  shift and go to state 58
    expression_12                  shift and go to state 59

state 13

    (2) topLevelDeclaration -> type initializedIdentifierList . POINT_V
    (4) topLevelDeclaration -> type initializedIdentifierList . POINT_V topLevelDeclaration

    POINT_V         shift and go to state 62


state 14

    (8) functionSignature -> type ID . formalParameterPart
    (5) initializedIdentifierList -> ID . EQUAL expression p_initializedIdentifierList_estrela
    (16) formalParameterPart -> . formalParameterList
    (17) formalParameterList -> . OPEN_PARENTHESES CLOSE_PARENTHESES
    (18) formalParameterList -> . OPEN_PARENTHESES normalFormalParameters COMMA CLOSE_PARENTHESES
    (19) formalParameterList -> . OPEN_PARENTHESES normalFormalParameters CLOSE_PARENTHESES

    EQUAL           shift and go to state 64
    OPEN_PARENTHESES shift and go to state 17

    formalParameterPart            shift and go to state 63
    formalParameterList            shift and go to state 16

state 15

    (9) functionSignature -> ID formalParameterPart .

    OPEN_KEYS       reduce using rule 9 (functionSignature -> ID formalParameterPart .)


state 16

    (16) formalParameterPart -> formalParameterList .

    OPEN_KEYS       reduce using rule 16 (formalParameterPart -> formalParameterList .)


state 17

    (17) formalParameterList -> OPEN_PARENTHESES . CLOSE_PARENTHESES
    (18) formalParameterList -> OPEN_PARENTHESES . normalFormalParameters COMMA CLOSE_PARENTHESES
    (19) formalParameterList -> OPEN_PARENTHESES . normalFormalParameters CLOSE_PARENTHESES
    (20) normalFormalParameters -> . normalFormalParameter p_normalFormalParameters_estrela
    (23) normalFormalParameter -> . type ID
    (10) type -> . VOID
    (11) type -> . STRING
    (12) type -> . BOOL
    (13) type -> . INT
    (14) type -> . FLOAT
    (15) type -> . VAR

    CLOSE_PARENTHESES shift and go to state 65
    VOID            shift and go to state 5
    STRING          shift and go to state 6
    BOOL            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    VAR             shift and go to state 10

    normalFormalParameters         shift and go to state 66
    normalFormalParameter          shift and go to state 67
    type                           shift and go to state 68

state 18

    (3) topLevelDeclaration -> functionSignature body topLevelDeclaration .

    $end            reduce using rule 3 (topLevelDeclaration -> functionSignature body topLevelDeclaration .)


state 19

    (24) body -> OPEN_KEYS statements . CLOSE_KEYS
    (26) statements -> statements . statement
    (28) statement -> . body
    (29) statement -> . localVariableDeclaration
    (30) statement -> . forStatement
    (31) statement -> . whileStatement
    (32) statement -> . ifStatement
    (33) statement -> . breakStatement
    (34) statement -> . continueStatement
    (35) statement -> . returnStatement
    (36) statement -> . expressionStatement
    (24) body -> . OPEN_KEYS statements CLOSE_KEYS
    (25) body -> . OPEN_KEYS CLOSE_KEYS
    (37) localVariableDeclaration -> . type ID EQUAL expression expression_one_equal POINT_COMMA
    (38) localVariableDeclaration -> . type ID expression_one_equal POINT_COMMA
    (39) localVariableDeclaration -> . type ID EQUAL expression COMMA ID POINT_COMMA
    (40) localVariableDeclaration -> . type ID COMMA ID POINT_COMMA
    (45) forStatement -> . FOR OPEN_PARENTHESES forLoopParts CLOSE_PARENTHESES statement
    (46) forStatement -> . FOR OPEN_PARENTHESES forLoopParts CLOSE_PARENTHESES body
    (59) whileStatement -> . WHILE OPEN_PARENTHESES expression CLOSE_PARENTHESES statement
    (60) whileStatement -> . WHILE OPEN_PARENTHESES expression CLOSE_PARENTHESES body
    (61) ifStatement -> . IF OPEN_PARENTHESES expression CLOSE_PARENTHESES statement ELSE statement
    (62) ifStatement -> . IF OPEN_PARENTHESES expression CLOSE_PARENTHESES body ELSE body
    (63) ifStatement -> . IF OPEN_PARENTHESES expression CLOSE_PARENTHESES statement ELSE body
    (64) ifStatement -> . IF OPEN_PARENTHESES expression CLOSE_PARENTHESES statement
    (65) ifStatement -> . IF OPEN_PARENTHESES expression CLOSE_PARENTHESES body
    (66) ifStatement -> . IF OPEN_PARENTHESES expression CLOSE_PARENTHESES body ELSE statement
    (67) breakStatement -> . BREAK POINT_COMMA
    (68) continueStatement -> . CONTINUE POINT_COMMA
    (71) returnStatement -> . expression POINT_COMMA
    (72) returnStatement -> . POINT_COMMA
    (69) expressionStatement -> . RETURN expression POINT_COMMA
    (70) expressionStatement -> . RETURN POINT_COMMA
    (10) type -> . VOID
    (11) type -> . STRING
    (12) type -> . BOOL
    (13) type -> . INT
    (14) type -> . FLOAT
    (15) type -> . VAR
    (73) expression -> . expression EQUAL expression_0
    (74) expression -> . expression PLUS_EQUAL expression_0
    (75) expression -> . expression MINUS_EQUAL expression_0
    (76) expression -> . expression MULTIPLICATION_DIVISION expression_0
    (77) expression -> . expression DIVIDE_EQUAL expression_0
    (78) expression -> . expression_0
    (79) expression_0 -> . expression_0 OR expression_1
    (80) expression_0 -> . expression_1
    (81) expression_1 -> . expression_1 AND expression_2
    (82) expression_1 -> . expression_2
    (83) expression_2 -> . expression_2 EQUAL_EQUAL expression_3
    (84) expression_2 -> . expression_2 DIFFERENT expression_3
    (85) expression_2 -> . expression_3
    (86) expression_3 -> . expression_3 EQUAL_EQUAL expression_4
    (87) expression_3 -> . expression_3 DIFFERENT expression_4
    (88) expression_3 -> . expression_4
    (89) expression_4 -> . expression_4 LESS_THAN expression_5
    (90) expression_4 -> . expression_4 GREATER_THAN expression_5
    (91) expression_4 -> . expression_4 LESS_THAN_OR_EQUAL_TO expression_5
    (92) expression_4 -> . expression_4 GREATER_THAN_OR_EQUAL_TO expression_5
    (93) expression_4 -> . expression_5
    (94) expression_5 -> . expression_5 LOGIC_OR expression_6
    (95) expression_5 -> . expression_6
    (96) expression_6 -> . expression_6 LOGIC_AND expression_7
    (97) expression_6 -> . expression_7
    (98) expression_7 -> . expression_7 SHIFT_LEFT expression_8
    (99) expression_7 -> . expression_7 SHIFT_RIGHT expression_8
    (100) expression_7 -> . expression_8
    (101) expression_8 -> . expression_8 PLUS expression_9
    (102) expression_8 -> . expression_8 MINUS expression_9
    (103) expression_8 -> . expression_9
    (104) expression_9 -> . expression_9 MULT expression_10
    (105) expression_9 -> . expression_9 PERCENTAGE expression_10
    (106) expression_9 -> . expression_9 DIVIDE expression_10
    (107) expression_9 -> . expression_10
    (108) expression_10 -> . MINUS expression_10
    (109) expression_10 -> . PLUS_PLUS expression_10
    (110) expression_10 -> . MINUS_MINUS expression_10
    (111) expression_10 -> . INVERT expression_10
    (112) expression_10 -> . expression_11
    (113) expression_11 -> . expression_11 MINUS_MINUS
    (114) expression_11 -> . expression_11 PLUS_PLUS
    (115) expression_11 -> . expression_11 OPEN_CONCHETE expression_11 CLOSE_CONCHETE
    (116) expression_11 -> . OPEN_PARENTHESES expression CLOSE_PARENTHESES
    (117) expression_11 -> . expression_12
    (118) expression_12 -> . ID
    (119) expression_12 -> . STRING_LITERAL
    (120) expression_12 -> . NUMBER
    (121) expression_12 -> . BOOL
    (122) expression_12 -> . ID OPEN_PARENTHESES normalFormalParameter CLOSE_PARENTHESES

    CLOSE_KEYS      shift and go to state 69
    OPEN_KEYS       shift and go to state 12
    FOR             shift and go to state 35
    WHILE           shift and go to state 37
    IF              shift and go to state 38
    BREAK           shift and go to state 39
    CONTINUE        shift and go to state 40
    POINT_COMMA     shift and go to state 34
    RETURN          shift and go to state 41
    VOID            shift and go to state 5
    STRING          shift and go to state 6
    BOOL            shift and go to state 42
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    VAR             shift and go to state 10
    MINUS           shift and go to state 53
    PLUS_PLUS       shift and go to state 55
    MINUS_MINUS     shift and go to state 56
    INVERT          shift and go to state 57
    OPEN_PARENTHESES shift and go to state 36
    ID              shift and go to state 32
    STRING_LITERAL  shift and go to state 60
    NUMBER          shift and go to state 61
